--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -304,16 +304,24 @@ jobs:
           cd ..
           echo "${OS_NAME}.zip" >bench-archive.filename;
           echo "BENCH_ARCHIVE=$(cat bench-archive.filename)" >>$GITHUB_ENV
-
-          RELEASE_ARCHIVE=$(find . -maxdepth 1 -iname "*.tar.xz")
+          RELEASE_ARCHIVE=$(find . -maxdepth 1 -iname "*.tar.xz" ! -iname "*-debug*")
+          DEBUG_ARCHIVE=$(find . -maxdepth 1 -iname "*-debug.tar.xz")
           echo $RELEASE_ARCHIVE >release-archive.filename
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
+          echo $DEBUG_ARCHIVE >debug-archive.filename
+          echo "DEBUG_ARCHIVE=$(cat debug-archive.filename)" >>$GITHUB_ENV
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts
           path: |
             ${{ env.RELEASE_ARCHIVE }}
             release-archive.filename
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-artifacts-debug
+          path: |
+            ${{ env.DEBUG_ARCHIVE }}
+            debug-archive.filename
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts-bench
@@ -374,30 +382,30 @@ jobs:
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/Scripts/swiftnav-console.exe"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
           elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
               chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
           elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
               chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
           fi
       - name: Run MEM Frontend Benchmark.
         shell: bash
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/Scripts/swiftnav-console.exe"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
           elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
               chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
           elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
               chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/swiftnav-console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
           fi
 
 
