--- a/entrypoint/Cargo.toml
+++ b/entrypoint/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pyo3 = "0.14.5"
 
 [[bin]]
 name = "console"
