use lld to link, set PYO3_PYTHON

--- a/.cargo/config
+++ b/.cargo/config
@@ -10,5 +10,10 @@ rustflags = [
   "-C", "link-arg=dynamic_lookup",
 ]
 
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+  "-C", "link-arg=-fuse-ld=lld"
+]
+
 [alias]
 fileio = "run --bin fileio --no-default-features --features env_logger --"
