--- a/entrypoint/Cargo.toml
+++ b/entrypoint/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pyo3 = "0.14.5"
+pyo3 = { version = "0.14.5", features = ["auto-initialize"] }
 
 [[bin]]
 name = "console"
