--- a/Makefile.toml
+++ b/Makefile.toml
@@ -10,14 +10,14 @@ if eq ${os} windows
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-win_amd64.whl
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
-  set_env PYO3_PYTHON "${WORKSPACE}\\py39\\python.exe"
+  set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.7-x86_64-unknown-linux-gnu-lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-linux_x86_64.whl
-  set_env PYO3_PYTHON "${WORKSPACE}/py39/bin/python3"
+  set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
@@ -27,7 +27,7 @@ else
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-macosx_10_15_x86_64.whl
-  set_env PYO3_PYTHON "${WORKSPACE}/py39/bin/python3"
+  set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
@@ -247,8 +247,16 @@ script = '''
 wget -O ./get-pip.py https://bootstrap.pypa.io/get-pip.py
 '''
 
+[tasks.write-pyo3-config]
+script_runner = "@duckscript"
+cwd = "standalone-py"
+condition = { files_not_exist = ["${PYO3_CONFIG_FILE}"] }
+script = '''
+writefile pyo3_config.txt "implementation=CPython\nversion=3.9\nshared=true\nabi3=false\nlib_name=python3.9\nlib_dir=${WORKSPACE}/standalone-py/python/install/lib\nexecutable=${WORKSPACE}/standalone-py/python/install/bin/python3.9\npointer_width=64\nbuild_flags=WITH_THREAD\nsuppress_build_script_link_lines=false\n"
+'''
+
 [tasks.get-standalone-py]
-dependencies = ["get-get-pip"]
+dependencies = ["get-get-pip", "write-pyo3-config"]
 cwd = "standalone-py"
 condition = { files_not_exist = ["${WORKSPACE}/standalone-py/python"] }
 script_runner = "@duckscript"
@@ -291,20 +299,19 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 
 [tasks.build-console]
 command = "cargo"
-args = ["build", "--release", "--bin", "console"]
+args = ["build", "--release", "-vv", "--bin", "console"]
 
 [tasks.build-dist-install-console]
 dependencies = ["build-console"]
 script_runner = "@duckscript"
 script = '''
-cp target/release/console py39-dist/bin/console
+cp target/release/console py39-dist/console
 '''
 
 [tasks.build-dist-install-console.windows]
 script = '''
-mkdir py39-dist/Scripts
-cp target/release/console.exe py39-dist/Scripts/console.exe
-cp target/release/console.pdb py39-dist/Scripts/console.pdb
+cp target/release/console.exe py39-dist/console.exe
+cp target/release/console.pdb py39-dist/console.pdb
 cp target/x86_64-pc-windows-msvc/release/console_backend.pdb py39-dist/Lib/site-packages/console_backend/console_backend.pdb
 '''
 
@@ -353,8 +360,7 @@ env = { PYTHONDONTWRITEBYTECODE = "1" }
 cwd = "py39-dist"
 script_runner = "@duckscript"
 script = '''
-
-py_folders = array test tests examples __pycache__ demos translations idlelib lib/tcl8 lib/tcl8.6 lib/tk8.6 shiboken2/docs ensurepip lib2to3 tkinter unittest include
+py_folders = array test tests examples __pycache__ demos turtledemo translations idlelib lib/tcl8 lib/tcl8.6 lib/tk8.6 shiboken2/docs ensurepip lib2to3 tkinter unittest include
 qt_folders = array plugins/geoservices plugins/virtualkeyboard plugins/sqldrivers lib/Tix8.4.3 tcl/tix8.4.3 Qt/resources PySide2/resources
 qml_folders = array qml/QtWeb* qml/QtBluetooth* qml/QtNfc* qml/QtGamepad qml/QtTest qml/QtQuick3D qml/Qt3D qml/QtSensors qml/QtLocation qml/QtPositioning
 all_folders = array_concat ${py_folders} ${qt_folders} ${qml_folders}
@@ -391,11 +397,7 @@ end
 
 os = os_family
 if eq ${os} windows
-    mv ./Scripts/console.exe .
-    mv ./Scripts/console.pdb .
     rm -r ./Scripts
-    mv ./console.exe ./Scripts/
-    mv ./console.pdb ./Scripts/
 
     rm -r ./include
     rm -r ./tcl
@@ -412,12 +414,6 @@ if eq ${os} windows
         rm ${bin}
     end
 else
-    mv ./bin/console .
-    mv ./bin/python3 .
-    rm -r ./bin
-    mv ./console ./bin/
-    mv ./python3 ./bin/
-
     rm -r ./share
 
     bins = array rcc uic designer
@@ -433,6 +429,12 @@ exec --fail-on-error ${DIST_PYTHON} -m pip uninstall -y pip setuptools wheel fli
 exec --fail-on-error ${DIST_PYTHON} -m compileall -b -f -o 1 -o 2 .
 
 if eq ${os} windows
+    rm ./python.exe
+else
+    rm -r ./bin
+end
+
+if eq ${os} windows
     globs = array pyexpat.* sqlite3.* _ctypes_test.* _bz2.* _decimal.* _elementtree.* _multiprocessing.* _sqlite3.* _ssl.* _tkinter.* _uuid.* _zoneinfo.* _msi.* _test*.*
     for glob in ${globs}
         files = glob_array ./DLLs/${glob}
@@ -440,6 +442,14 @@ if eq ${os} windows
             rm ${file}
         end
         files = glob_array ./libs/${glob}
+        for file in ${files}
+            rm ${file}
+        end
+    end
+else
+    globs = array *.a
+    for glob in ${globs}
+        files = glob_array ./lib/**/${glob}
         for file in ${files}
             rm ${file}
         end
@@ -474,14 +484,14 @@ end
 [tasks.strip-dist]
 script_runner = "@duckscript"
 script = '''
-exec --fail-on-error strip py39-dist/bin/console
+exec --fail-on-error strip py39-dist/console
 '''
 
 [tasks.strip-dist.windows]
 script_runner = "@duckscript"
 script = '''
 cm_run_task strip-dist-pdb
-exec --fail-on-error strip.exe py39-dist/Scripts/console.exe
+exec --fail-on-error strip.exe py39-dist/console.exe
 '''
 
 [tasks.compress-dist]
@@ -681,42 +691,42 @@ args = ["utils/bench_runner.py", "--disk_usage"]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/bin/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console
 '''
 
 [tasks.frontend-cpu-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/Scripts/console.exe
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console.exe
 '''
 
 [tasks.frontend-cpu-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/bin/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console
 '''
 
 [tasks.frontend-mem-bench.linux]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/bin/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console
 '''
 
 [tasks.frontend-mem-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/Scripts/console.exe
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console.exe
 '''
 
 [tasks.frontend-mem-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/bin/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console
 '''
 
 [tasks.newline-terminator]
