--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -184,23 +184,14 @@ jobs:
     strategy:
       matrix:
         os:
-#        - ubuntu-20.04
-#        - ubuntu-18.04
+        - ubuntu-20.04
+        - ubuntu-18.04
 #        - macos-10.15
         - windows-2019
 
     runs-on: ${{ matrix.os }}
 
     steps:
-
-      - name: Build ${{ runner.os }} Binaries.
-        shell: powershell
-        run: |
-          & where.exe strip.exe
-          choco list --localonly
-          exit 1
-        if: matrix.os == 'windows-2019'
-
 
       - name: Checkout source
         uses: actions/checkout@v2
