--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -207,11 +207,11 @@ jobs:
       - name: Run ssh-keyscan
         run: ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      # - name: Setup SSH for Windows Git LFS
-      #   run: |
-      #     & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
-      #     & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
-      #   if: matrix.os == 'windows-2019'
+      - name: Setup SSH for Windows Git LFS
+        run: |
+          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
+          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
+        if: matrix.os == 'windows-2019'
 
       - name: Install ${{ runner.os }} Dependencies.
         shell: bash
@@ -246,25 +246,6 @@ jobs:
               choco install capnproto nsis
           fi
 
-#      - name: Set up LLVM
-#        uses: egor-tensin/setup-clang@v1
-#        with:
-#          version: 13
-#          platform: x64
-
-      # - name: Show gcc path
-      #   shell: bash
-      #   run: |
-      #     sudo echo deb http://dk.archive.ubuntu.com/ubuntu/ xenial main >> /etc/apt/sources.list
-      #     sudo echo deb http://dk.archive.ubuntu.com/ubuntu/ xenial universe >> /etc/apt/sources.list
-      #     sudo apt-get update
-      #     sudo apt-get install -y \
-      #           g++-4.9
-      #     gcc --version
-      #     which gcc
-      #     which cc
-      #     export
-
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -294,12 +275,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Build ${{ runner.os }} Binaries.
-      #   env:
-      #     LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
-      #   run: |
-      #     cargo make create-dist
-      #   if: matrix.os == 'windows-2019'
+      - name: Build ${{ runner.os }} Binaries.
+        env:
+          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
+        run: |
+          cargo make create-dist
+        if: matrix.os == 'windows-2019'
 
       - name: Build ${{ runner.os }} Binaries.
         shell: bash
