--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -335,6 +335,7 @@ jobs:
         shell: bash
         run: |
           cargo make disk-usage-bench
+
   frontend_bench:
     name: Run Frontend Benchmarks
     timeout-minutes: 30
@@ -344,7 +345,7 @@ jobs:
       matrix:
         os:
 #          - macOS
-#          - Windows
+          - Windows
           - Linux
     runs-on: [self-hosted, '${{ matrix.os }}']
     steps:
@@ -383,32 +384,28 @@ jobs:
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
-          elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/console.exe"
+          elif [ "$RUNNER_OS" == "macOS" ] || [ "$RUNNER_OS" == "Linux" ]; then
+              chmod +x "${GITHUB_WORKSPACE}/console/console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/console"
+          else
+              echo "Invalid platform"
+              exit 1
           fi
+
       - name: Run MEM Frontend Benchmark.
         shell: bash
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
-          elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/console.exe"
+          elif [ "$RUNNER_OS" == "macOS" ] || [ "$RUNNER_OS" == "Linux" ]; then
+              chmod +x "${GITHUB_WORKSPACE}/console/console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/console"
+          else
+              echo "Invalid platform"
+              exit 1
           fi
-
 
   release:
     name: Create Release
