--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -246,11 +246,11 @@ jobs:
               choco install capnproto nsis
           fi
 
-      - name: Set up Clang
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: 13
-          platform: x64
+#      - name: Set up Clang
+#        uses: egor-tensin/setup-clang@v1
+#        with:
+#          version: 13
+#          platform: x64
 
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
