pyo3 based console launcher [CPP-381] (#207)
* build script.

* use lld to link, set PYO3_PYTHON

* remove CC/CXX env set

* linker paths, alt frozen method, pyo3 config

* disable non linux bench

* debug

* debug

* windows

* enable windows ci

* reenable windows ci stuff

* fix-ups

* typo

* pass rustc args via build script

* add clang

* lld-13

* move

* remove lld

* use install_name_tool

* re-enable macos

* adjust exit path for pyo3 wrapper

* disable clang setup

* Remove u20 and uncomment original CI. (#210)

* Remove u20 and uncomment original CI.

* Fix linter.

Co-authored-by: John Michael Burke <johnmichael.burke@swift-nav.com>
Co-authored-by: John-Michael Burke <43353147+john-michaelburke@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -184,9 +184,9 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
-          - macos-10.15
-          - windows-2019
+        - ubuntu-18.04
+        - macos-10.15
+        - windows-2019
 
     runs-on: ${{ matrix.os }}
 
@@ -334,6 +334,7 @@ jobs:
         shell: bash
         run: |
           cargo make disk-usage-bench
+
   frontend_bench:
     name: Run Frontend Benchmarks
     timeout-minutes: 30
@@ -382,32 +383,28 @@ jobs:
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
-          elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/bin/console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/console.exe"
+          elif [ "$RUNNER_OS" == "macOS" ] || [ "$RUNNER_OS" == "Linux" ]; then
+              chmod +x "${GITHUB_WORKSPACE}/console/console"
+              python ./bench_runner.py --frontend_cpu --executable="${GITHUB_WORKSPACE}/console/console"
+          else
+              echo "Invalid platform"
+              exit 1
           fi
+
       - name: Run MEM Frontend Benchmark.
         shell: bash
         run: |
           cd console
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/Scripts/console.exe"
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
-          elif [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/console"
-              chmod +x "${GITHUB_WORKSPACE}/console/bin/python3"
-              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/bin/console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/console.exe"
+          elif [ "$RUNNER_OS" == "macOS" ] || [ "$RUNNER_OS" == "Linux" ]; then
+              chmod +x "${GITHUB_WORKSPACE}/console/console"
+              python ./bench_runner.py --frontend_mem --executable="${GITHUB_WORKSPACE}/console/console"
+          else
+              echo "Invalid platform"
+              exit 1
           fi
-
 
   release:
     name: Create Release
@@ -455,4 +452,3 @@ jobs:
             macos/${{ env.MACOS_ARCHIVE }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
