--- a/Makefile.toml
+++ b/Makefile.toml
@@ -526,6 +526,27 @@ run_task = [{ name = ["build-dist", "purge-dist", "compress-dist"] }]
 
 [tasks.dist-to-installer]
 
+[tasks.dist-to-installer.linux]
+env = { TMP_DIR = "target/installer", OPT_DIR = "opt", USR_DIR = "usr", APP_DIR_NAME = "swift-navigation-console", APPS_DIR = "share/applications", ICONS_DIR = "share/icons/hicolor" }
+script_runner = "@shell"
+script = '''
+
+if [ -d $TMP_DIR ]; then
+  rm -rf $TMP_DIR
+fi
+
+mkdir -p $TMP_DIR/$OPT_DIR
+cp -r py39-dist/ $TMP_DIR/$OPT_DIR/$APP_DIR_NAME/
+
+mkdir -p $TMP_DIR/$USR_DIR/$APPS_DIR
+cp installers/Linux/$APP_DIR_NAME.desktop $TMP_DIR/$USR_DIR/$APPS_DIR/
+mkdir -p $TMP_DIR/$USR_DIR/$ICONS_DIR
+cp -r installers/Linux/hicolor/ $TMP_DIR/$USR_DIR/$ICONS_DIR/
+
+fpm -t deb -s dir -v $(cat console_backend/src/version.txt) --debug --verbose -C $TMP_DIR -f -n $APP_DIR_NAME $OPT_DIR $USR_DIR
+mv *.deb installers/Linux/
+'''
+
 [tasks.dist-to-installer.windows]
 script_runner = "@shell"
 script = '''
